Bug 1704167 - Don't rewind if we're still at the beginning of the pattern. r=jfkthame

This can happen with whitespace, and can cause us to scan whitespace
exponentially. Should be straight-forward and have no behavior change.

This restores the performance characteristics of the findbar before
the regressing bug.

Differential Revision: https://phabricator.services.mozilla.com/D111633